# Web-assignment

./: .gitignore  README.md  index.html
KiPouCuit/: db.sqlite3  manage.py  meals_list.json  meals_list.py
KiPouCuit/KiPouCuit/: asgi.py  settings.py  urls.py  wsgi.py
KiPouCuit/admin_panel/: apps.py
KiPouCuit/api/: serializers.py  urls.py  views.py
KiPouCuit/homecook/: admin.py  apps.py  models.py  urls.py  views.py
KiPouCuit/homecook/migrations/: 0001_initial.py  0002_alter_homecook_cuisine.py  0003_homecook_user_alter_homecook_cuisine_and_more.py  0004_homecook_latitude_homecook_longitude.py
KiPouCuit/main_page/: models.py  urls.py  views.py
KiPouCuit/main_page/migrations/: 0001_initial.py
KiPouCuit/meals/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
KiPouCuit/meals/migrations/: 0001_initial.py
KiPouCuit/mobile-app/: main.py  pyproject.toml
KiPouCuit/mobile-app/components/: shared.py
KiPouCuit/mobile-app/screens/: cart_screen.py  login_screen.py  meals_screen.py  nearby_screen.py  orders_screen.py  profile_screen.py  register_screen.py  reviews_screen.py
KiPouCuit/mobile-app/services/: api_client.py  auth_service.py  nearby_service.py
KiPouCuit/orders/: forms.py  models.py  urls.py  views.py
KiPouCuit/orders/migrations/: 0001_initial.py  0002_order_client_name_orderitem_created_at_and_more.py  0002_order_user.py
KiPouCuit/reviews/: admin.py  models.py  urls.py  views.py
KiPouCuit/templates/: base.html  cart.html
KiPouCuit/users/: forms.py  models.py  signals.py  urls.py  views.py
(+49 files in other folders)
